syntax = "proto3";

package com.metrocarpool.rider;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.metrocarpool.rider.proto";
option java_outer_classname = "RiderProto";

service DriverService {
  rpc PostRiderInfo (PostRider) returns (RiderStatusResponse);
}

message RiderStatusResponse {
  bool status = 1;
}

message PostRider {
  int64 riderId = 1;
  string pickUpStation = 2;
  google.protobuf.Timestamp arrivalTime = 3;
  string destinationPlace = 4;
}